--- a/client/css/style.css
+++ b/client/css/style.css
@@ -25,13 +25,13 @@
   border-radius: 0.5rem;
 }
 
-.about-section {
+/* .about-section {
   background-color: #333;
   color: #ffffff;
   padding: 2rem;
   border-radius: 0.5rem;
   text-align: center;
-}
+} */
 
 .testimonial {
   background-color: #444;
@@ -44,4 +44,51 @@
   background-color: #e4e4e4;
   padding: 2rem;
   border-radius: 0.5rem;
+}
+
+.btn-outline-white {
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid #fff;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.375rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.btn-outline-white:hover {
+  color: #000;
+  background-color: #fff;
+  border-color: #fff;
+}
+
+.btn-outline-white:focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+}
+
+.btn-outline-white:active {
+  background-color: #fff;
+  color: #000;
+  border-color: #fff;
+  box-shadow: inset 0 3px 5px rgba(255, 255, 255, 0.125);
+}
+
+.btn-outline-white:disabled {
+  color: #fff;
+  background-color: transparent;
+  border-color: #fff;
+  opacity: 0.65;
+  pointer-events: none;
+}
+
+.hover-top:hover {
+  transform: translateY(-5px);
+  transition: 0.3s ease;
+}
+
+.hover-image:hover{
+  transform: scale(1.3);
+  transition: 0.5s ease-in-out;
 }
