--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -154,3 +154,18 @@ body{
 .text-right{
     text-align: right;
 }
+
+.slide-in {
+    animation: slideFadeIn 0.6s ease-out forwards;
+}
+
+@keyframes slideFadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-30px) translateX(-50%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0) translateX(-50%);
+    }
+}
