--- a/client/css/style.css
+++ b/client/css/style.css
@@ -415,3 +415,18 @@ body {
   fill: currentColor;
   margin-right: 0.5rem;
 }
+
+.slide-in {
+    animation: slideFadeIn 0.6s ease-out forwards;
+}
+
+@keyframes slideFadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-30px) translateX(-50%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0) translateX(-50%);
+    }
+}
